feat(custom-js): implement GET /processors/{processor_id}
