# src/processors/routes/processorsRoute.js
@@ -8,5 +8,6 @@ let processors = require('../controllers/processorController');
 
 router.get('/', swaggerValidator.validate, processors.getAllProcessors);
 router.post('/', swaggerValidator.validate, processors.createProcessor);
+router.get('/:processor_id', swaggerValidator.validate, processors.getProcessor);
 
 module.exports = router;
